--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=MentalHealth
 
 #spring.application.name=chatApp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gomaa
+spring.datasource.url=jdbc:mysql://yamabiko.proxy.rlwy.net:55438/railway
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=AgmfgDcTVdVOxPOQSRczxafTmxiJLgYH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Properties
